--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8" />
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon-Optimized Optimization</title>
 </head>
 
 <body>
-    <!-- Top of page -->
+    <!-- Nav Bar Links -->
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
         <nav>
@@ -25,7 +25,7 @@
             </ul>
         </nav>
     </header>
-    <!-- Top Page Photo -->
+    <!-- Photo organization -->
     <div class="section" title="digital marketing meeting"></div>
     <main>
         <div id="search-engine-optimization" 
@@ -49,6 +49,7 @@
             <h2>Social Media Marketing</h2>
             <p>Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, using analytics to find the right markets and increase your lead generation.</p>
         </div>
+        <!-- Sidebar Code -->
     </main>
     <div class="benefits">
         <div class="benefit-lead">
@@ -67,6 +68,7 @@
             <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
         </div>
     </div>
+    <!-- Footer -->
     <footer>
         <h4>Made with ❤️️ by Horiseon</h4>
         <p>
